# a11oy

./: .anatomy-gate-verify.md  .dockerignore  .doctrine-allowlist  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .guarded-import-allowlist  .hf_rebuild_marker  .shared_module_hashes.json  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONSOLIDATION.md  CONTRIBUTING.md  DEVELOPER_ONBOARDING.md  Dockerfile  ENGINE_STATUS.md  FIX_LOG.md  GOVERNANCE.md  HEART_BLOOD.md  HONEST_DISCLOSURE.md  KNOWN_GOTCHAS.md  NEWORGAN_NEUROMORPHIC_D.md  NOTICE  NOTICES.md  NOTICE_warhacker_demos.txt  OPS_NOTES.md  OUROBOROS_RUN_ALL.py  PER_APP_MODULES.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SOVEREIGN_REMOTE.md  STATUS.md  SUPPORT.md  YACHAY_SYSTEM_PROMPT.md  (+448 more)
infra/khipu-consensus/python/: pyproject.toml
infra/khipu-consensus/python/khipu_consensus/: __init__.py  cli.py
infra/khipu-consensus/python/tests/: test_vectors.py
organs/amaru/sidecar/: .env.example  README.md  pyproject.toml
organs/amaru/sidecar/scripts/: bootstrap_venv.sh  pin_proofs.py  pin_results.py  serve_dualstack.py  vendor_anatomy.py
organs/amaru/sidecar/src/amaru/: __init__.py  amaru_scheduler.py  app.py  chakana_wiring.py  citations.py  confidence.py  overwatch.py  receipts.py  telemetry.py  version.py  (+1 more)
organs/amaru/sidecar/tests/: test_app.py  test_citations.py  test_dinn_receipt.py  test_no_fabrication.py  test_otel_spans.py  test_overwatch.py  test_overwatch_api.py  test_parity_endpoints.py  test_scheduler.py  test_serve_healthz.py  test_telemetry_and_health.py
(+4056 files in other folders)
