[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amaru"
version = "0.1.0"
description = "Amaru — Andean Ouroboros brain runtime. 7-chakra kernels behind a single FastAPI surface."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amaru"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
